# block-ci-cdemo

./: Justfile  app.py  pyproject.toml
tests/: __init__.py  test_app.py
